# Trading-Exchange-Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmarks/: bench_alloc_count.cpp  bench_latency_percentiles.cpp  bench_order_book.cpp  bench_stub.cpp
cmake/: CompilerWarnings.cmake
docs/: architecture.md  coding-standards.md
docs/benchmarks/: report-2026-07-13.md
docs/decisions/: 001-static-library.md
docs/releases/: v0.1.md  v0.2.md
include/mercury/: version.hpp
include/mercury/core/: matching_engine.hpp  order.hpp  order_book.hpp  price_level.hpp  trade.hpp  types.hpp
scripts/: build.sh  format.sh
src/cli/: main.cpp
src/core/: matching_engine.cpp  order_book.cpp  price_level.cpp  version.cpp
tests/integration/: test_engine_integration.cpp
tests/stress/: test_random_stress.cpp
tests/unit/: test_matching_engine.cpp  test_order_book.cpp  test_smoke.cpp
